@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
+	<category label="30103">
     <setting label="30050" id="quality" type="enum" lvalues="30051|30052|30053|30054|30055|30056|30080" default="0" />
+	</category>
 </settings>
