@@ -1,3 +1,11 @@
+[B]1.9.2:[/B]
+- added RTVS Sport
+- added info and img to Live
+- fixed archive by Date and 
+- added descriptions archive by Date
+- fixed settings menu
+[B]1.9.1:[/B]
+- Kodi 19 Matrix update
 [B]1.8.0:[/B]
 - Kodi 18 Leia update
 - streams from archive was stuttering due ffmpeg bug, solved with InputStream Adaptive
